# case-insensitive

./: README  case-insensitive.cabal
System/IO/: CaseInsensitive.hs
